[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-beefy = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "rockmint-10005" }
