[package]
name = "polkadot-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-beefy = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "vstakhov-yamux-window" }
