[package]
name = "runtime-upgrade"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = "1.3.1"
hex = "0.4.2"
primitive-types = "0.7.2"

manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-test-runner = { git = "https://github.com/paritytech/substrate-test-runner", branch = "seun-fork-existing-chain" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

# primitive deps
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

# pallets
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-democracy = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

polkadot-runtime = { path = "../runtime/polkadot" }
polkadot-core-primitives = { path = "../core-primitives" }
polkadot-service = { path = "../node/service" }
polkadot-runtime-common = { path = "../runtime/common" }
