[package]
name = "polkadot-runtime"
version = "0.7.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "extract-gossip", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
rstd = { package = "sp-std", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-io = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-staking = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-core = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-serializer = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
sp-session = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
version = { package = "sp-version", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }

authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
authorship = { package = "pallet-authorship", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
babe = { package = "pallet-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
balances = { package = "pallet-balances", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
collective = { package = "pallet-collective", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
democracy = { package = "pallet-democracy", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
elections-phragmen = { package = "pallet-elections-phragmen", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
executive = { package = "frame-executive", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
grandpa = { package = "pallet-grandpa", git = "https://github.com/tomaka/polkadot", default-features = false, features = ["migrate-authorities"], branch = "extract-gossip" }
identity = { package = "pallet-identity", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
im-online = { package = "pallet-im-online", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
indices = { package = "pallet-indices", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
membership = { package = "pallet-membership", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
nicks = { package = "pallet-nicks", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
offences = { package = "pallet-offences", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
session = { package = "pallet-session", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
frame-support = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
staking = { package = "pallet-staking", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
pallet-staking-reward-curve = { git = "https://github.com/tomaka/polkadot", branch = "extract-gossip" }
system = { package = "frame-system", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }
treasury = { package = "pallet-treasury", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "extract-gossip" }

primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "https://github.com/tomaka/polkadot", branch = "extract-gossip" }
sp-trie = { git = "https://github.com/tomaka/polkadot", branch = "extract-gossip" }
trie-db = "0.16.0"
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"rstd/std",
	"sp-io/std",
	"frame-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"identity/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"session/std",
	"staking/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"randomness-collective-flip/std",
]
